<resources>
    <string name="app_name">MR NexGen</string>
</resources>
